kubernetes/generatedManifests/test/infrastructure/linkerd-viz/1-manifest/policy.linkerd.io_v1alpha1-authorizationpolicy-linkerd-viz-tap.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"policy.linkerd.io/v1alpha1","kind":"AuthorizationPolicy","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.12.1"},"labels":{"app.kubernetes.io/managed-by":"pulumi","component":"tap","linkerd.io/extension":"viz"},"name":"tap","namespace":"linkerd-viz"},"spec":{"requiredAuthenticationRefs":[{"group":"policy.linkerd.io","kind":"NetworkAuthentication","name":"kube-api-server"}],"targetRef":{"group":"policy.linkerd.io","kind":"Server","name":"tap-api"}}}
    linkerd.io/created-by: linkerd/helm stable-2.12.1
  labels:
    app.kubernetes.io/managed-by: pulumi
    component: tap
    linkerd.io/extension: viz
  name: tap
  namespace: linkerd-viz
spec:
  requiredAuthenticationRefs:
  - group: policy.linkerd.io
    kind: NetworkAuthentication
    name: kube-api-server
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: tap-api
